--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
     background-color: #caf7e3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto Condensed', sans-serif
 }
 hr {
     border-style: none;
     border-top-style: dotted;
-    border-color: grey;
+    border-color: #ffc93c;
     border-width: 5px;
     width: 5%;
 }
@@ -19,3 +24,23 @@ img{
     border-style: double;
     border-color: black;
 }
+
+.holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #feffde;
+    width: 70%;
+    border-radius: 1%;
+    padding: 3%;
+
+}
+
+.edu{
+    text-align: center;
+}
+ .name:hover{
+     color: #2f5d62;
+
+ }
