--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #caf7e3;
     display: flex;
@@ -23,6 +24,9 @@ img{
     border-radius: 50%;
     border-style: double;
     border-color: black;
+    width: 25%;
+    height: auto;
+
 }
 
 .holder {
@@ -34,6 +38,8 @@ img{
     width: 70%;
     border-radius: 1%;
     padding: 3%;
+    font-size: 2 rem;
+    overflow: hidden;
 
 }
 
